# model-benchmarking

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  LoRA_Technical_Guide.md  NOTICE  PROJECT_STATUS.md  README.md  SECURITY.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/: README.md
.beads/: README.md  config.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  labels.yml  pull_request_template.md
benchmark-test/: README.md  cs_eval_official.py  cs_eval_test.py  cybersec_quiz.py  run_cs_eval.py  run_quiz.py
benchmark_test/: cve_bench_test.py  enhanced_phi3_cve_tester.py  phi3_cve_tester.py  run_cs_eval.py
benchmarking/: README.md  setup.sh
benchmarking/cybergym/: README.md  evaluation_report.md  evaluator.py  pyproject.toml  setup.sh
benchmarking/cybergym/README/: part_1.md  part_2.md  part_3.md  part_4.md
benchmarking/cybergym/cybergym/: download_cybergym_subset.py  inspect_cybergym_splits.py  poc_workflow.py  run_evaluation.py  task_generation.py
benchmarking/cybergym/cybergym/cybergym.egg-info/: PKG-INFO  SOURCES.txt
benchmarking/cybergym/cybergym/server/: __init__.py  __main__.py  pocdb.py  server_utils.py  types.py
benchmarking/cybergym/cybergym/task/: README.template  __init__.py  arvo_task.py  gen_task.py  oss_fuzz_task.py  types.py
benchmarking/cybergym/cybergym/utils/: model_loader.py
benchmarking/cybergym/evaluation_report/: part_1.md  part_2.md  part_3.md
datasets/: README_fine_tuning.md  RESUME_TRAINING.sh  chat_with_cybersec_model.py  clean_datasets.py  cleanup_checkpoints.sh  resume_training.py  training_config.yaml  utils.py
docs/: EVALS.md  PATTERN_IDENTIFICATION_IMPLEMENTATION.md  README.md  agents.md  cli.md  ide-errors.md  issues.md  letta-eval.md  roadmap.md  troubleshooting.md
examples/: integrate_example.py  run_agent_cybergym.py
llamafile-test/: README.md  requirements.txt
scripts/: AGGRESSIVE_MEMORY_TRAINING.py  RESUME_TRAINING.sh  analyze_dataset_quality.py  augment_agentic_conversations.py  chat_mamba_cybersec.py  chat_mamba_simple.sh  chat_with_cybersec_model.py  check_jsonl_validity.py  chunk_dataset_for_mamba.py  clean_cybersec_dataset.py  clean_cybersec_dataset_v2.py  clean_jsonl_files.py  clean_nova_jsonl.py  cleanup_old_adapters.sh  complete_dataset_converter.py  convert_and_validate_agentic_dataset.py  convert_to_agentic_template.py  convert_to_messages_format.py  create_clean_dataset.py  create_comprehensive_dataset.py  create_valid_jsonl.py  data_formatter_cleaner.py  extract_agentic_pairs.py  filter_agentic_conversations.py  filter_cybersec_only.py  final_dataset_cleanup.py  (+34 more)
(+308 files in other folders)
