[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-benchmarking"
version = "0.1.0"
description = "Shared model benchmarking utilities and thin shims for existing suites"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["PyYAML", "click"]

[project.scripts]
mbenchmark = "model_benchmarking.cli:main"
