[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-benchmarking"
version = "0.1.0"
description = "Shared model benchmarking utilities and thin shims for existing suites"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"PyYAML",
	"click",
	"datasets",
	"requests",
	"pydantic>=2.5,<3",
	"strands-agents[ollama,otel]",
	"strands-agents-tools",
]

[project.optional-dependencies]
inspect = [
    "inspect-ai>=0.3.0",
]

[project.scripts]
mbenchmark = "mcp.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
	"benchmarking",
	"benchmark-test",
	"results",
	"sanitized-db",
	"environments",
]
