[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-benchmarking"
version = "0.1.0"
description = "Shared model benchmarking utilities and thin shims for existing suites"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
    "click>=8.1.7",
    "datasets>=2.18.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "langdetect>=1.0.9",
    "unidecode>=1.3.8",
    "tqdm>=4.66.0",
    "huggingface_hub>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.6",
    "hypothesis>=6.100.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
inspect = [
    "inspect-ai>=0.3.0",
]

[project.scripts]
mbenchmark = "model_benchmarking_cli.cli:start"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    "benchmark_test",
    "results",
    "sanitized_db",
    "environments",
]
